[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/painter/channel_painter/channel_painter.gd" type="Script" id=1]
[ext_resource path="res://addons/painter/channel_painter/result.gdshader" type="Shader" id=2]
[ext_resource path="res://addons/painter/channel_painter/stroke.gdshader" type="Shader" id=3]
[ext_resource path="res://addons/painter/channel_painter/premult_alpha.material" type="Material" id=4]

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/erase = null
shader_param/strength = 0.031

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/brush_transform = null
shader_param/brush_color = Plane( 1, 1, 1, 1 )
shader_param/stencil_transform = null
shader_param/erase = false
shader_param/max_opacity = 1.0

[node name="ChannelPainter" type="Node"]
script = ExtResource( 1 )

[node name="ResultViewport" type="Viewport" parent="."]
own_world = true
transparent_bg = true
usage = 1
render_target_v_flip = true
render_target_clear_mode = 1
render_target_update_mode = 0

[node name="ClearColorRect" type="ColorRect" parent="ResultViewport"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )

[node name="ClearTextureRect" type="TextureRect" parent="ResultViewport"]
material = ExtResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
expand = true

[node name="ResultTextureRect" type="ColorRect" parent="ResultViewport"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="StrokeViewport" type="Viewport" parent="."]
own_world = true
transparent_bg = true
keep_3d_linear = true
render_target_v_flip = true
render_target_update_mode = 0

[node name="Camera" type="Camera" parent="StrokeViewport"]
transform = Transform( -1, -1.74846e-07, -2.62268e-07, -1.74846e-07, 1, -1.52855e-14, 2.62268e-07, 3.0571e-14, -1, 0.5, 0.5, -1.8395 )
projection = 1

[node name="MeshInstance" type="MeshInstance" parent="StrokeViewport"]
material_override = SubResource( 3 )
skeleton = NodePath("")
